gccida/c1/instantiate_virtual_regs_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4261:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4261:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4273:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4273:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4275:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4275:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4277:6: error: use of undeclared identifier 'v31'
rtx *v31; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4301:4: error: expected ';' after expression
rtx v55; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4301:5: error: use of undeclared identifier 'v55'
rtx v55; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4303:6: error: use of undeclared identifier 'v57'
rtx *v57; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4308:4: error: expected ';' after expression
rtx insn; // [rsp+0h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4308:5: error: use of undeclared identifier 'insn'; did you mean 'insns'?
rtx insn; // [rsp+0h] [rbp-68h] 
    ^~~~
    insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4306:18: note: 'insns' declared here
 struct rtx_def *insns; // r15 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4315:4: error: expected ';' after expression
rtx arg0b; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4315:5: error: use of undeclared identifier 'arg0b'
rtx arg0b; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4317:4: error: expected ';' after expression
rtx y; // [rsp+18h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4317:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+18h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4318:4: error: expected ';' after expression
rtx value; // [rsp+20h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4318:5: error: use of undeclared identifier 'value'
rtx value; // [rsp+20h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/function.c:4320:6: error: use of undeclared identifier 'v75'
rtx *v75; // [rsp+30h] [rbp-38h] 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/instantiate_virtual_regs_1/src/obj/function.o] Error 1
